# tdc_toolkit

./: .editorconfig  .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  calc_g2.py  clippy.toml  example.ipynb  install_mhlib.sh  pyproject.toml  tbump.toml  wrapper.h
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  check.yml  publish.yml
benches/: raw_stream_benchmark.rs
mhlib_downloader/: .editorconfig  Cargo.toml
mhlib_downloader/src/: lib.rs  main.rs
parser-rs/: Cargo.toml
parser-rs/src/: main.rs  parser.rs
python/multiharp_toolkit/: calc_g2.py  cmd.py  coincidence_counter.py  device.py  exceptions.py  histogram.py  interface.py  output.py  ptu_parser.py  stream_parser.py  stub_device.py  tttr_record.py  units.py  util_types.py
python/tdc_toolkit/: __init__.py
python/tdc_toolkit/multiharp/: __init__.pyi
python_tests/: conftest.py  test_coincidence_counter.py  test_ptu_parser.py  test_tttr_record.py
sample_config/: multiharp160.json  multiharp160_all_filter_options.json  multiharp160_main_event_filter.json  multiharp160_no_event_filter.json
sample_python/: record_multiharp_stub.py
sampledata/: example-1min-ch1-t2.pickle  example-1min-ch1-t2.ptu
src/: device.rs  histogram.rs  lib.rs  mhlib_wrapper.rs  mhlib_wrapper_enums.rs  mhlib_wrapper_header.rs  mhlib_wrapper_py.rs  multiharp.rs  multiharp_device.rs  multiharp_device_stub.rs  output.rs  parquet_writer.rs  parser.rs  parser_py.rs  python_api.rs  recording.rs  stub_device.rs  tttr_record.rs  types.rs  version.rs
src/histogram/: time_bin.rs
src/mh_file_parser/: parser.py
src/multiharp/: device.rs  device_stub.rs  mhlib_wrapper.rs  mhlib_wrapper_header.rs  mhlib_wrapper_stub.rs  parser.rs  recording.rs  tttr_record.rs
src/multiharp/mhlib_wrapper/: meta.rs  real.rs  stub.rs
src/multiharp/mhlib_wrapper/meta/: event_filter.rs
src/multiharp_toolkit/: __init__.py  _mhtk_rs.pyi  calc_g2.py  cmd.py  coincidence_counter.py  coincidence_counter_test.py  device.py  histogram.py  multiharp_toolkit.pyi  parser.py  ptu_parser.py  ptu_parser_test.py  stream_parser.py  util.py  util_types.py
src/multiharp_toolkit_rs/: .gitignore  Cargo.toml  build.rs  pyproject.toml  wrapper.h
src/multiharp_toolkit_rs/src/: lib.rs
src/output/: parquet.rs
tests/: conftest.py  test_coincidence_counter.py  test_ptu_parser.py
