[package]
name = "tdc_toolkit"
version = "0.1.0"
edition = "2024"

[lib]
name = "tdc_toolkit"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
arrow = "55.0.0"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
humantime = "2.2.0"
indicatif = "0.17.11"
nom = "7.1.3"
parquet = "55.0.0"
pyo3 = { version = "0.24.2", features = ["anyhow", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"

[build-dependencies]
bindgen = "0.71.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "raw_stream_benchmark"
harness = false

[features]
extension-module = ["pyo3/extension-module"]
multiharp = []
default = ["extension-module", "multiharp"]

# [lints.clippy]
# all = "deny"
# pedantic = "deny"
# nursery = "deny"
# cargo = "deny"

# # Restrictions from the restriction group
# # TODO finish configuring this
# # https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
# absolute_paths = "deny"
# allow_attributes = "deny"
# allow_attributes_without_reason = "deny"
