# TODO figure out how to make more of the project keys dynamic
# https://www.maturin.rs/metadata.html
#
# TODO figure out how to conditionally activate the multiharp feature
# so maturin doesn't always build it
[project]
name = "tdc-toolkit"
version = "0.3.0"
description = "Rust and Python wrappers and helper libraries for working with time-to-digital converters."
authors = [
    { name = "zigen", email = "hrlclb@gmail.com" },
    { name = "Andrew Todd", email = "at@auspicacious.org" }
]
readme = "README.md"
requires-python = ">= 3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    'maturin>=1.4.0 ; platform_system == "Windows"',
    'maturin[patchelf]>=1.4.0 ; platform_system != "Windows"',
    "mypy>=1.11.2",
    "pip>=24.2", # maturin requires pip to be installed to build
    "pylint>=3.3.1",
    "ruff>=0.8.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"

[tool.maturin]
features = ["multiharp", "pyo3/extension-module"]
module-name = "tdc_toolkit"
python-source = "python"

[tool.mypy]
files = ["."]
exclude = ["^MHLib_.*_64bit/"]
strict = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = "88"

# See https://pylint.pycqa.org/en/latest/user_guide/messages/index.html
[tool.pylint."messages control"]
disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "deprecated-pragma", "use-symbolic-message-instead", "use-implicit-booleaness-not-comparison-to-string", "use-implicit-booleaness-not-comparison-to-zero", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring", "line-too-long", "duplicate-code", "too-many-instance-attributes", "too-few-public-methods", "too-many-public-methods", "too-many-arguments", "too-many-locals", "too-many-positional-arguments", "fixme"]
