[project]
dynamic = [
        "author",
        "author_email",
        "description",
        "description_content_type",
        "home_page",
        "keywords",
        "license",
        "project_url",
        "summary",
        "version",
]
name = "tdc-toolkit"
requires-python = ">= 3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    'maturin>=1.4.0 ; platform_system == "Windows"',
    'maturin[patchelf]>=1.4.0 ; platform_system != "Windows"',
    "mypy>=1.11.2",
    "pip>=24.2", # maturin requires pip to be installed to build
    "pylint>=3.3.1",
    "ruff>=0.8.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"

# This will build tdc_toolkit without support for the proprietary
# MultiHarp driver library. To build the Python bindings with
# MultiHarp support, edit the `features` line to include the
# `multiharp` feature or directly use the `maturin` command line with
# `--features` instead of uv.
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tdc_toolkit"
python-source = "python"

[tool.mypy]
files = ["."]
exclude = ["^MHLib_.*_64bit/"]
strict = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = "88"

# See https://pylint.pycqa.org/en/latest/user_guide/messages/index.html
[tool.pylint."messages control"]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring", "too-few-public-methods"]
