[package]
name = "mhlib_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.8", features = ["gzip", "tokio"] }
async_http_range_reader = "0.7.1"
async_zip = { version = "0.0.15", features = ["full"] } # As of async_http_range_reader 0.7.1, nothing newer than 0.0.15 is supported, see https://github.com/prefix-dev/async_http_range_reader/issues/14
clap = { version = "4.5.4", features = ["derive"] }
hex-literal = "0.4.1"
http = "1.1.0"
once_cell = "1.19.0"
reqwest = "0.12.4"
sha3 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tar = "0.3.1"
tokio-util = "0.7.10"
url = "2.5.0"
