[package]
name = "ptu-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name="main"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
nom = "7.1.3"
plotters = "0.3.5"
polars = { version = "0.34.2", features = ["lazy"] }
