[package]
name = "multiharp_toolkit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "multiharp_toolkit_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"

[build-dependencies]
bindgen = "0.69.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
